--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -5,7 +5,11 @@
   grid-template-columns: auto auto;
   gap: fluid(60, 10);
   justify-items: center;
-  padding-top: rem(80);
+
+  @include w660{
+    grid-template-columns: 100%;
+    text-align: center;
+  }
 
   &__description {
     max-width: rem(900);
@@ -15,20 +19,15 @@
     border-radius: 30px;
   }
 
-
   &__title {
     position: relative;
     padding-top: rem(20);
-    font-size: fluid(64, 18);
-
-    &--highlight {
-      color: var(--color-orange);
-    }
+    font-size: fluid(64, 22);
   }
 
   &__about {
     padding-top: rem(24);
-    font-size: fluid(36, 22);
+    font-size: fluid(28, 16);
   }
 
   &__interests {
