--- a/src/styles/blocks/_stack.scss
+++ b/src/styles/blocks/_stack.scss
@@ -17,6 +17,7 @@
       padding-bottom: rem(40);
       display: flex;
       justify-content: center;
+      font-size: fluid(24, 18);
     }
 
     &-item {
