--- a/src/styles/blocks/_games.scss
+++ b/src/styles/blocks/_games.scss
@@ -3,13 +3,16 @@
 .games {
   &__item {
     display: grid;
-    grid-template-columns: 30% auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: 32% auto;
     justify-items: center;
     align-items: center;
     padding-bottom: rem(60);
     column-gap: fluid(40, 20);
     row-gap: rem(10);
+
+    grid-template-areas: 
+    "name button"
+    "image description";
 
     @include w1023 {
       grid-template-columns: 100%;
